Ajout du fichier .htaccess et fin de la documentation
